# tree_matching

./: pyproject.toml  requirements.txt
docs/: README.md  SYNTAX_basic_matching.ipynb  SYNTAX_embedding_clustering.ipynb  SYNTAX_neural_exemplar_extraction.ipynb  SYNTAX_partial_beam_matching.ipynb  SYNTAX_subgraph_matching.ipynb  SYNTAX_template_repeat_matching.ipynb  UNITTEST_exact_matcher_dev.ipynb
experiments/: EXPT_model_based_exemplar_benchmark.ipynb  EXPT_neural_exemplar_benchmark.ipynb  EXPT_runtime_benchmark.ipynb  README.md
src/benchmarking/: __init__.py  shared.py
src/embedder/: __init__.py  tree_cluster.py  utils.py
src/exemplar/: __init__.py  _legacy_chatgpt_msa.py  _legacy_simple_msa.py  bags.py  extract.py  likelihood.py  medoid.py  metrics.py  poa.py  preprocess.py  utils.py
src/exemplar/neural/: __init__.py  sequence_class_utils.py  set_conditioned_generator.py
src/path_matcher/: __init__.py  beam_align.py  bucketable_weight.py  candidates.py  demo.py  igraph_io.py  matcher.py  needleman_wunsch_tree.py  normalizer.py  planted_path_sampler.py  reference_match.py  sparse_align.py  sparse_preprocess.py  tree_viz.py  weight_wrappers.py
src/subgraph_match/: __init__.py  fast_subgraph_match.py  fast_subgraph_match_unordered.py  subgraph_utils.py
tests/: README.md  dev_utils.py  prep_reference_match_cases.py  run_reference_match_tests.py  test_fast_match_regression.py  test_partial_beam_matching.py  test_template_repeat_mode.py
tests/fixtures/: reference_match_cases.pkl
